--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,16 +5,12 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.controlsfx-8.40.14-javadoc.jar=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kitty Kiosk\\lib
 file.reference.controlsfx-8.40.14-sources.jar=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kiosk\\Libary
-file.reference.controlsfx-8.40.14-sources.jar-1=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kitty Kiosk\\lib
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kiosk\\Libary
-file.reference.controlsfx-8.40.14.jar-1=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kitty Kiosk\\lib
-file.reference.jlibs-core.jar=C:\\Users\\Belva\\OneDrive\\Documents\\Coding Projects\\Asset Panda Kitty Kiosk\\lib
 javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
 jlink.strip=false
-user.properties.file=C:\\Users\\Belva\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+user.properties.file=C:\\Users\\iisdr\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
