--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,30 +33,22 @@ dist.jar=${dist.dir}/Asset Panda Kitty Kiosk.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-8.40.14-javadoc.jar=Libary/controlsfx-8.40.14-javadoc.jar
 file.reference.controlsfx-8.40.14-javadoc.jar-1=lib\\controlsfx-8.40.14-javadoc.jar
 file.reference.controlsfx-8.40.14-sources.jar=C:\\Users\\iisdr\\Desktop\\Asset Panda Kiosk\\Libary\\controlsfx-8.40.14-sources.jar
-file.reference.controlsfx-8.40.14-sources.jar-1=Libary/controlsfx-8.40.14-sources.jar
 file.reference.controlsfx-8.40.14-sources.jar-2=lib\\controlsfx-8.40.14-sources.jar
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\iisdr\\Desktop\\Asset Panda Kiosk\\Libary\\controlsfx-8.40.14.jar
-file.reference.controlsfx-8.40.14.jar-1=Libary/controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-2=lib\\controlsfx-8.40.14.jar
-file.reference.jlibs-core.jar=Libary/jlibs-core.jar
 file.reference.jlibs-core.jar-1=lib\\jlibs-core.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.jlibs-core.jar}:\
-    ${file.reference.controlsfx-8.40.14-javadoc.jar}:\
-    ${file.reference.controlsfx-8.40.14-sources.jar-1}:\
-    ${file.reference.controlsfx-8.40.14.jar-1}:\
     ${file.reference.controlsfx-8.40.14-javadoc.jar-1}:\
     ${file.reference.controlsfx-8.40.14-sources.jar-2}:\
     ${file.reference.controlsfx-8.40.14.jar-2}:\
-    ${file.reference.jlibs-core.jar-1}
+    ${file.reference.jlibs-core.jar-1}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
